Ignore en masse Icon.meta

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,31 @@ sysinfo.txt
 # Vores egne
 /Assets/Completed*
 *Icon.meta
+
+Assets/Icon.meta
+
+Assets/Materials/Icon.meta
+
+Assets/Scenes/Icon.meta
+
+Assets/Scripts/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/BeamParts/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/Blocks/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/Items/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/Materials/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Models/Players/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Scenes/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Scripts/Icon.meta
+
+Assets/Vertexcolored Bomberman-like Asset Pack/Shaders/Icon.meta
